<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/price_textview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="384dp"
        android:layout_height="52dp"
        android:fontFamily="@font/fugaz_one"
        android:gravity="center"
        android:text="@string/heading_text_view"
        android:textColor="#000000"
        android:textSize="34sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="407dp"
        android:layout_height="167dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/pizzaphoto"
        android:contentDescription="@string/pizza_image_description_text"/>


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="401dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="157dp"
        android:layout_height="37dp"
        android:gravity="center|start"
        android:text="@string/topping_heading"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <CheckBox
        android:id="@+id/cheese_checkBox"
        android:layout_width="394dp"
        android:layout_height="54dp"
        android:text="@string/first_topping"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <CheckBox
        android:id="@+id/chilli_checkBox"
        android:layout_width="393dp"
        android:layout_height="58dp"
        android:text="@string/second_topping"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:gravity="center|start"
        android:text="@string/quantity_heading"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="99dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/minus_symbol"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="86dp"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/initial_quantity"
            android:textSize="24sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/increment_button"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/plus_symbol"
            android:textSize="24sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit_order_button"
        android:layout_width="257dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/submit_order_button_text"
        android:textAllCaps="true"
        android:textSize="24sp" />


</LinearLayout>